[package]
name = "frostore"
description = "Schnorr Threshold Signature Database"
repository = "https://github.com/GavBog/FROSTore"
version = "0.2.2"
authors = ["Gavin Bogie <me@gbogie.com> (https://www.gbogie.com/)"]
license = "GPL-3.0"
edition = "2021"

[workspace]
members = ["examples/*"]

[dependencies]
async-channel = "2"
async-io = "2"
async-std = { version = "1", optional = true }
base64 = "0.22"
bincode = "1"
dashmap = "6"
frost-ed25519 = "1"
futures = "0.3"
libp2p = { version = "0.53", features = [
  "async-std",
  "cbor",
  "gossipsub",
  "identify",
  "kad",
  "noise",
  "quic",
  "request-response",
  "tcp",
  "yamux",
] }
once_cell = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"], optional = true }

[features]
default = []
async-std = ["dep:async-std"]
tokio = ["dep:tokio", "libp2p/tokio"]

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
