[package]
name = "distributed_onion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
data-encoding = "2.5.0"
frostore = { path = "../.." }
sha3 = "0.10.8"
tokio = { version = "1.35.0", features = ["full"] }
