[package]
name = "distributed_onion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = "0.22"
frostore = { path = "../..", features = ["tokio"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1", features = ["full"] }
tor-hscrypto = "0.26"
