[package]
name = "frost_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frostore = { version = "0.1.3", path = "../..", features = ["tokio"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
tokio = { version = "1", features = ["full"] }
