[package]
name = "restful_frost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8"
base64 = "0.22"
frostore = { path = "../..", features = ["tokio"] }
log = "0.4"
pretty_env_logger = "0.5"
serde = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
reqwest = "0.12"
